<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30dp"
                android:gravity="center_horizontal"
                android:text="@string/sujet_de_la_reunion"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/EditTextSujet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10dp"
                android:gravity="center_horizontal" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/LLHoraire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/HoraireText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heure"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:hint="@string/hint12"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/HoraireText" />


                    <Button
                        android:id="@+id/button_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajouter_une_heure"
                        android:textSize="12sp"
                        android:layout_marginTop="@dimen/margin10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hour"
                        android:backgroundTint="@color/colorPrimary"/>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LLdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/LLHoraire"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/DateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10dp"
                        android:hint="@string/_01_03_20"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/HoraireText" />


                    <Button
                        android:id="@+id/button_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajouter_une_date"
                        android:textSize="12sp"
                        android:layout_marginTop="@dimen/margin10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hour"
                        android:backgroundTint="@color/colorPrimary"/>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/TextSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin40dp"
                android:text="@string/salle"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/EditTextSalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin10dp"/>


            <TextView
                android:id="@+id/TextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin40dp"
                android:gravity="center_horizontal"
                android:text="@string/Mail"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/EditTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10dp"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/Button_add_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ajouter_participant"
                    android:backgroundTint="@color/colorPrimary"/>

            </LinearLayout>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/List_chip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>