<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/margin5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/Image_Fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_brightness_1"
            android:padding="@dimen/margin5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10dp"
            app:layout_constraintStart_toEndOf="@id/Image_Fragment"
            app:layout_constraintTop_toTopOf="parent"
            android:ellipsize="end">


            <TextView
                android:id="@+id/Salle_reunion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/Dimen5dp"
                android:text="@string/salle_reunion"
                android:textSize="@dimen/TextSizeFragment15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/Heure_Fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/Dimen5dp"
                android:text="@string/heure_fragment"
                android:textSize="@dimen/TextSizeFragment15dp"
                app:layout_constraintStart_toEndOf="@id/Salle_reunion"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/Nom_Fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/Dimen5dp"
                android:text="@string/nom"
                android:textSize="@dimen/TextSizeFragment15dp"
                app:layout_constraintStart_toEndOf="@id/Heure_Fragment"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/date_Fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/Dimen5dp"
                android:text="@string/datefragment"
                android:textSize="@dimen/TextSizeFragment15dp"
                app:layout_constraintStart_toEndOf="@id/Nom_Fragment"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <TextView
                android:id="@+id/Mail_Fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/Dimen5dp"
                android:text="@string/e_mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Salle_reunion"
                android:ellipsize="end"
                android:maxLines="1">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/DeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/margin15dp">

        </ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>