...
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>


            <Spinner
                android:id="@+id/room_spinner_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
...
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>


            <Spinner
                android:id="@+id/date_spinner_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal">

            </Spinner>
...
